--- a/configuration/templates/account/hours.hbs
+++ b/configuration/templates/account/hours.hbs
@@ -121,7 +121,7 @@
       </div>
       <div class="column col-1"></div>
       <div class="column col-1">
-        <a href="/admin-pdf/{{task_id}}" class="btn btn-primary r-margin b-margin" download>Download all</a>
+        <a href="/group-certificate/{{task_id}}" class="btn btn-primary r-margin b-margin" download>Download all</a>
       </div>
       <div class="column col-1"></div>
     </div>
@@ -163,7 +163,7 @@
           {{/if}}
         </div>
         <div class="column col-2">
-          <a href="/admin-pdf/{{task_id}}/{{hours_id}}" class="btn" download>Download</a>
+          <a href="/group-certificate/{{task_id}}/{{hours_id}}" class="btn" download>Download</a>
         </div>
         <div class="column col-1">
           {{#if claim_code}}
