--- a/configuration/templates/task/verify-hours-fail.hbs
+++ b/configuration/templates/task/verify-hours-fail.hbs
@@ -3,6 +3,6 @@
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
   <p class="empty-title h5">Volunteering verification</p>
-  <p class="empty-subtitle">Verification has failed. Please <a href="{{@root.context.metaData.contacts.admin}}">contact us</a> for assistance.</p>
+  <p class="empty-subtitle">Verification has failed. Please <a href="mailto:{{>support_email_address}}">contact us</a> for assistance.</p>
   <div class="empty-action"></div>
 </div>
