--- a/configuration/templates/account/email/welcome.hbs
+++ b/configuration/templates/account/email/welcome.hbs
@@ -4,6 +4,7 @@
   {
   "from": "{{@root.context.metaData.contacts.noreply}}",
   "h:sender": "{{@root.context.metaData.contacts.noreply}}",
+  "h:Reply-To": "{{>support_email_address}}",
   "to": "{{{@root.data.accountInfo.email}}}",
   "o:tag": "welcome",
   "o:tracking": true,
