--- a/configuration/templates/task/email/verify-hours.hbs
+++ b/configuration/templates/task/email/verify-hours.hbs
@@ -4,6 +4,7 @@
     {
     "from": "{{@root.context.metaData.contacts.noreply}}",
     "h:sender": "{{@root.context.metaData.contacts.noreply}}",
+    "h:Reply-To": "{{>support_email_address}}",
     "to": "{{{this}}}",
     "o:tag": "{{{../type}}}",
     "o:tracking": true,
