Fixed labelling on change email

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -71,14 +71,14 @@
           </div>
 
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-email" placeholder="New password" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="email" id="change-email-email" placeholder="New email" data-lpignore="true" autocomplete="off"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
-            <span class="form-icon far fa-key"></span>
+            <span class="form-icon far fa-at"></span>
           </div>
           <div class="form-group has-icon-left">
-            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="off"
+            <input class="form-input" type="email" id="change-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="off"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
-            <span class="form-icon far fa-key"></span>
+            <span class="form-icon far fa-at"></span>
           </div>
 
           <button class="btn btn-primary" data-component="TasksTrigger" data-TasksTrigger="show-confirm-modal"
