--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -15,7 +15,7 @@
         <p>
           {{name}} hour certificate awarded!
         </p>
-        <a href="/certificate-pdf" class="btn btn-primary" download>Download</a>
+        <a href="/certificate" class="btn btn-primary" download>Download</a>
       </div>
       {{else}}
       {{#compare @root.data.verifyHoursInfo.award "===" hours ~}}
