--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -53,7 +53,7 @@
     </div>
     <div class="my-saltire columns">
       <div class="column col-6 my-saltire-item align-centre">
-        <a href="/sign-up" class="btn btn-primary text-centre">Register now</a>
+        <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
       </div>
       <div class="column col-6 my-saltire-item align-centre">
         <a href="/sign-in" class="btn text-centre">Sign in</a>
