--- a/configuration/partials/volunteering/opportunity/key-info.hbs
+++ b/configuration/partials/volunteering/opportunity/key-info.hbs
@@ -54,7 +54,7 @@
     </div>
     {{/compare ~}}
     {{#ifAll organisation_id organisation_name_slug organisation_name ~}}
-    <ul class="fa-ul organisation no-margin">
+    <ul class="fa-ul organisation">
       <li class="card-subtitle">
         <span class="fa-li"><span class="far fa-home-heart" title="Organisation"></span></span>
         {{organisation_name}}
