--- a/configuration/templates/page/home-authenticated.hbs
+++ b/configuration/templates/page/home-authenticated.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container b-padding-full v-margin-full equal-height">
   <h1>
     {{#if @root.data.isAdmin ~}}
       {{@root.route.metaData.adminTitle}}
