--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -169,7 +169,7 @@
             <span class="far fa-download" aria-hidden="true"></span>
             Import account settings
           </button> -->
-          <button class="btn btn-error v-margin" id="delete-account-button" data-component="TasksTrigger"
+          <button class="btn btn-error" id="delete-account-button" data-component="TasksTrigger"
             data-TasksTrigger="show-confirm-modal" data-confirm-task="delete-account" data-confirm-verb="delete your account"
             data-confirm-description="#delete-account-description">
             <!-- <span class="far fa-trash" aria-hidden="true"></span> -->
