--- a/src/main.scss
+++ b/src/main.scss
@@ -411,6 +411,7 @@ form {
     border: none;
     cursor: pointer;
     outline: none;
+    display: block;
     .fa-fw {
       margin-right: $unit/4;
     }
