--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -446,7 +446,7 @@
       }
     },
     "theme": "edgeless",
-    "position": "bottom-right",
+    "position": "bottom-left",
     "content": {
       "message": "We use cookies to track anonymous usage statistics.",
       "href": "/cookies"
