--- a/configuration/templates/error/404.hbs
+++ b/configuration/templates/error/404.hbs
@@ -1,33 +1,11 @@
-<div class="container">
-  <h2>The page you requested could not be found</h2>
-  <p>
-    We recently relaunched our website and some page addresses may have changed.
-  </p>
-  {{#ifAll data.supplimentaryResponses.not_found (compare data.supplimentaryResponses.not_found.hits.total ">" 0) ~}}
-  <h3>Did you mean?</h3>
-  {{#each data.supplimentaryResponses.not_found.hits.hits ~}}
-  {{#compare @index "===" 0 ~}}
-  {{>highlight_result}}
-  {{else}}
-  {{/compare ~}}
-  {{/each ~}}
-  {{/ifAll ~}}
-
-  {{#ifAll data.not_found (compare data.not_found.hits.total ">" 1) ~}}
-  <hr />
-  <h3>Other relevant content</h3>
-  {{#each data.not_found.hits.hits ~}}
-  {{#compare @index "===" 0 ~}}
-  {{else}}
-  {{>highlight_result}}
-  {{/compare ~}}
-  {{/each ~}}
-  {{/ifAll ~}}
-
-  <script>
-  gtag('event', '404', {
-    event_category: '{{name}}',
-    event_label: '{{request.params.uri.pathname}}'
-  });
-  </script>
+<div class="empty">
+  <div class="empty-icon">
+    <span class="fal fa-exclamation-circle fa-3x"></span>
+  </div>
+  <p class="empty-title h5">Error 404: The page you requested could not be found</p>
+  <p class="empty-subtitle">Please try again, but contact us if the problem persists.</p>
+  <div class="empty-action">
+    <a href="/" class="btn btn-primary">Home</a>
+    <a href="mailto:{{> support_email_address}}" class="btn btn-link">Contact us</a>
+  </div>
 </div>
